# MelonLoader_057

./: MonkiiLoader.sln  README.md
Dependencies/Il2CppAssemblyGenerator/: Config.cs  Core.cs  FileHandler.cs  Il2CppAssemblyGenerator.csproj  RemoteAPI.cs
Dependencies/MelonStartScreen/: Core.cs  MelonStartScreen.csproj  ModLoadStep.cs  MonkiiStartScreen.csproj  ProgressParser.cs  ScreenRenderer.cs  TextMeshGenerator.cs
Dependencies/SupportModules/: Component.cs  SceneHandler.cs  SupportModule_To.cs  UnityMappers.cs
MelonLoader/: BootstrapInterop.cs  Core.cs  MelonLoader.csproj  MelonUtils.cs  MonkiiEvents.cs  MonkiiLaunchOptions.cs  MonkiiLoader.csproj  MonkiiUtils.cs
MelonLoader.NativeHost/: NativeEntryPoint.cs  StereoHostingApi.cs
MelonLoader/Assertions/: LemonAssert.cs  LemonAssertException.cs  LemonAssertMapping.cs
MelonLoader/Attributes/: HarmonyDontPatchAllAttribute.cs  MonkiiAdditionalDependenciesAttribute.cs  MonkiiAuthorColorAttribute.cs  MonkiiColorAttribute.cs  MonkiiGameAttribute.cs  MonkiiGameVersionAttribute.cs  MonkiiIDAttribute.cs  MonkiiInfoAttribute.cs  (+10 more)
libBootstrap/: Cargo.toml  build.bat  libBootstrap.code-workspace
libBootstrap/src/: chaos.rs  constants.rs  core.rs  core_android.rs  lib.rs
libBootstrap/src/base_assembly/: dotnet.rs
libBootstrap/src/errors/: hookerr.rs
libBootstrap/src/hooks/: dlopen_hook.rs  functions.rs  mod.rs
libBootstrap/src/hooks/init_hook/: il2cpp.rs  mod.rs  mono.rs
libBootstrap/src/hooks/invoke_hook/: il2cpp.rs  mod.rs  mono.rs
libBootstrap/src/icalls/: resolve_internals.rs
libBootstrap/src/logging/: assert.rs  logger.rs
libBootstrap/src/melonenv/: args.rs  paths.rs
libBootstrap/src/utils/: apk_asset_copier.rs  mod.rs  native_lib_loader.rs  pathbuf_impls.rs  runtime.rs  strings.rs
(+279 files in other folders)
