[package]
name = "Bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ctor = "0.1.26"
libc = "0.2.142"
log = "0.4.14"
thiserror = "1.0.40"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk = { version = "0.7", features = ["api-level-23"] }
android_log = "0.1.3"

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
]