[package]
name = "Bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
colored = "2.0.0"
ctor = "0.1.26"
libc = "0.2.142"
thiserror = "1.0.40"
lazy_static = "1.4.0"
clap = { git = "https://github.com/RinLovesYou/clap", features = ["derive"] }
chrono = "0.4.23"
libc-stdhandle = "0.1.0"
exe = "0.5.6"
dobby-rs = { git = "https://github.com/RinLovesYou/dobby-rs" }
unity-rs = { git = "https://github.com/TrevTV/Ferrex" }

[patch.'https://github.com/RinLovesYou/dobby-sys.git']
dobby-sys = { git = 'https://github.com/TrevTV/dobby-sys.git' }

[target.'cfg(not(target_os = "android"))'.dependencies]
msgbox = "0.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.51.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging"
]}

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk = { version = "0.7", features = ["api-level-23"] }
android_liblog-sys = "0.1"

[package.metadata.docs.rs]
targets = [
    "aarch64-linux-android",
]